--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -1,16 +1,22 @@
 <ul class="posts">
-			{% for post in posts %}
-			<li class="post">
-				<div class="profile-thumbnail">
-					<a href="{{ url_for('.user', username=post.author.username) }}">
-					<img class="img-rounded profile-thumbnail" src="{{ url_for('static',filename='fuzi32.png') }}">
-					</a>
-				</div>
-				<div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
-				<div class="post-author">
-					<a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a>
-				</div>
-				<div class="post-body">{{ post.body }}</div>
-			</li>
-			{% endfor %}
-		</ul>
+{% for post in posts %}
+	<li class="post">
+		<div class="profile-thumbnail">
+			<a href="{{ url_for('.user', username=post.author.username) }}">
+				<img class="img-rounded profile-thumbnail" src="{{ url_for('static',filename='fuzi32.png') }}">
+			</a>
+		</div>
+		<div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
+		<div class="post-author">
+			<a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a>
+		</div>
+		<div class="post-body">
+			{% if post.body_html %}
+			{{ post.body_html|safe }}
+			{% else %}
+			{{post.body}}
+			{% endif %}
+		</div>
+	</li>
+{% endfor %}
+</ul>
