--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Flasky</a>
+			<a class="navbar-brand" href="/">MUI System---HS</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
