--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -1,12 +1,15 @@
 <ul class="posts">
 {% for post in posts %}
 	<li class="post">
+		<div class="post-content">
 		<div class="profile-thumbnail">
 			<a href="{{ url_for('.user', username=post.author.username) }}">
 				<img class="img-rounded profile-thumbnail" src="{{ url_for('static',filename='fuzi32.png') }}">
 			</a>
 		</div>
-		<div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
+		<div class="post-date">		 
+		创建于：{{ moment(post.timestamp).fromNow() }}
+		</div>
 		<div class="post-author">
 			<a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a>
 		</div>
@@ -17,6 +20,18 @@
 			{{post.body}}
 			{% endif %}
 		</div>
+		</div>
+		<div class="post-footer">
+		{% if current_user==post.author %}
+			<a href="{{ url_for('.edit',id=post.id) }}"><span class="label label-primary">Edit</span></a>
+		{% elif current_user.is_administrator() %}
+		<a href="{{url_for('.edit',id=post.id)}}">
+		<span class="label label-danger">Edit[Admin]</span></a>
+		{% endif %}
+		<a href="{{ url_for('.post', id=post.id) }}">
+			<span class="label label-default">Permalink</span>
+		</a>
+	</div>
 	</li>
 {% endfor %}
 </ul>
